docs: add body parameters to PUT endpoints
